classifier-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: classifer-deployment
    labels:
        app: classifier
spec:
    replicas: 2
    selector:
        matchLabels:
            app: classifier
    template:
        metadata:
            labels:
                app: classifier
        spec:
            containers:
                - name: classifier
                  image: fastapi-classifier-k8s:latest
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 8000
