classifier-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: classifier-service
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    type: NodePort
    selector:
        app: classifier
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8000
          nodePort: 30000
