classifier-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: classifier-ingress
    annotations:
        nginx.ingress.kubernetes.io/affinity: "cookie"
        nginx.ingress.kubernetes.io/affinity-mode: "balanced"
        nginx.ingress.kubernetes.io/session-cookie-name: "INGRESSCOOKIE"
        nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
        nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
    rules:
        - host: ajith.fastapi
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: classifier-service
                            port:
                                number: 80
